--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/ru_ru.json
@@ -19,6 +19,8 @@
   "text.rei.inventory.highlighting.enabled.tooltip": "Это делает слоты, которые не соответствуют\nфильтру поиска серыми.\nДважды нажмите на строке поиска, чтобы переключить этот режим.",
   "text.rei.caching.search": "REI кэширует результаты поиска...",
   "text.rei.caching.search.step": "Шаг %d/%d (%s%%):",
+  "text.rei.searching": "Результаты поиска REI...",
+  "text.rei.searching.step": "При первом поиске это происходит медленнее.\nПрогресс: %s%%",
   "text.rei.config.menu.dark_theme": "Тёмная тема",
   "text.rei.config.menu.craftable_filter": "Фильтр по возможности создания",
   "text.rei.config.menu.display": "Настройки отображения...",
@@ -85,6 +87,7 @@
   "text.rei.input.methods.jyutping.description": "Метод ввода соответствует Китайским символам с Ютпхин (Кантон)",
   "text.rei.input.methods.pinyin": "Пиньинь (мандарин)",
   "text.rei.input.methods.pinyin.description": "Метод ввода для сопоставления китайских иероглифов с пиньинь (мандаринским языком).",
+  "text.rei.input.methods.pinyin.fuzzy.matching": "Нечеткое сопоставление...",
   "text.rei.input.methods.bopomofo": "Бопомофо (мандарин)",
   "text.rei.input.methods.bopomofo.description": "Метод ввода для сопоставления китайских иероглифов с бопомофо (мандаринским).",
   "text.rei.input.methods.pinyin.double": "Двойной пиньинь (мандаринский)",
@@ -94,7 +97,14 @@
   "text.rei.input.methods.pinyin.double.scheme.microsoft": "Microsoft",
   "text.rei.input.methods.pinyin.double.scheme.pinyinpp": "Пиньинь++",
   "text.rei.input.methods.pinyin.double.scheme.xiaohe": "XiaoHe",
+  "text.rei.input.methods.pinyin.double.scheme.natural": "Естественный",
+  "text.rei.input.methods.hint": "Для вашего языка доступны альтернативные методы ввода.",
   "text.rei.input.methods.initializing": "Запускается метод ввода",
+  "text.rei.input.methods.tooltip.hints": "Отображать подсказки",
+  "text.rei.hint.input.methods": "Поздравляем с настройкой метода ввода!\nВы можете перенастроить его с помощью кнопки «Фильтр поиска»!",
+  "text.rei.hint.favorites.discover": "Вы только что удалили избранную запись!\nВы можете добавить ее обратно, нажав кнопку + здесь!",
+  "text.rei.hint.configure": "Настроить",
+  "text.rei.hint.ignore": "Игнорировать",
   "ordering.rei.ascending": "По возрастанию",
   "ordering.rei.descending": "По убыванию",
   "ordering.rei.registry": "Регистр",
@@ -180,6 +190,11 @@
   "text.rei.changelog.title": "Список изменений REI",
   "text.rei.changelog.error.missingChangelogFile": "Отсутствует файл журнала изменений!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Не удалось прочитать файл журнала изменений!",
+  "text.rei.collapsed.entry": "Свернутая запись: %s",
+  "text.rei.collapsed.entry.hint.expand": "Alt-клик, чтобы развернуть все %s (%d записи)",
+  "text.rei.collapsed.entry.hint.expand.macos": "Опции-клик, чтобы развернуть все %s (%d записи)",
+  "text.rei.collapsed.entry.hint.collapse": "Alt-клик, чтобы свернуть все %s (%d записи)",
+  "text.rei.collapsed.entry.hint.collapse.macos": "Опции-клик, чтобы свернуть все %s (%d записи)",
   "favorite.section.gamemode": "Игровой режим",
   "favorite.section.weather": "Погода",
   "favorite.section.time": "Время",
@@ -251,6 +266,7 @@
   "config.roughlyenoughitems.accessibility.entrySize": "Размер предметов:",
   "config.roughlyenoughitems.search.asyncSearch": "Асинхронный поиск:",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Размер раздела асинхронного поиска:",
+  "config.roughlyenoughitems.search.patchAsyncThreadCrash": "Исправление сбоя асинхронного потока:",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "Компактные вкладки:",
   "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Компактные кнопки со стрелками Tab:",
   "config.roughlyenoughitems.theme": "Тема оформления:",
@@ -306,6 +322,7 @@
   "config.roughlyenoughitems.miscellaneous.newFastEntryRendering": "Быстрая отрисовка предметов:",
   "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering": "Кеширование отрисовки предметов:",
   "config.roughlyenoughitems.miscellaneous.cachingFastEntryRendering.@PrefixText": "Эта настройка может повысить производительность прорисовки предметов до 5 раз со средним повышением производительности в 2,5 раза. Однако, это повлияет на сияние чар и анимированные текстуры.",
+  "config.roughlyenoughitems.miscellaneous.cachingDisplayLookup": "Поиск в кэше отображения:",
   "config.roughlyenoughitems.itemCheatingMode": "Количество выдаваемых предметов:",
   "config.roughlyenoughitems.itemCheatingMode.rei_like": "Нормальное",
   "config.roughlyenoughitems.itemCheatingMode.jei_like": "Инвертированное",
@@ -333,6 +350,12 @@
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.true": "Увеличение",
   "config.roughlyenoughitems.isFocusModeZoomed.boolean.false": "Подсвечивание",
   "config.roughlyenoughitems.filtering.shouldFilterDisplays": "Дисплеи должны быть отфильтрованы:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories": "Исключенные категории быстрого создания:",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure": "Настроить...",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.title": "Настройка категорий быстрого создания",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.toggle": "Переключить",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.true": "Доступно для быстрого создания",
+  "config.roughlyenoughitems.filtering.filteringQuickCraftCategories.configure.false": "Не доступно для быстрого создания",
   "config.roughlyenoughitems.filteringScreen": "Настраиваемая фильтрация",
   "config.roughlyenoughitems.filteringRulesScreen": "Настраиваемые правила фильтрации",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Создать правило фильтрации",
@@ -346,6 +369,10 @@
   "rule.roughlyenoughitems.filtering.search.show": "Показать/Скрыть:",
   "rule.roughlyenoughitems.filtering.search.show.true": "Показать",
   "rule.roughlyenoughitems.filtering.search.show.false": "Скрыть",
+  "rule.roughlyenoughitems.filtering.basic": "Базовая фильтрация плагинов",
+  "rule.roughlyenoughitems.filtering.basic.subtitle": "Фильтруйте записи по плагинам REI. Здесь это не настраивается.",
+  "rule.roughlyenoughitems.filtering.hide.tag": "Фильтрация тегов",
+  "rule.roughlyenoughitems.filtering.hide.tag.subtitle": "Фильтруйте записи по 'c:hidden_from_recipe_viewers'. Здесь это не настраивается.",
   "language.roughlyenoughitems.english": "Английский",
   "language.roughlyenoughitems.japanese": "Японский",
   "language.roughlyenoughitems.chinese_simplified": "Китайский (упрощенный)",
